--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "object-assign": "^4.1.1",
     "preact": "^8.2.9",
     "preact-compat": "^3.18.0",
+    "smoothscroll": "^0.4.0",
     "xhr": "^2.5.0"
   }
 }
